# routes/searchRoute.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+
+const searchController = require('../controllers/searchController');
+
+router.get('/', searchController.searchBooks);
+
+module.exports = router;
